--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -50,19 +50,15 @@ jobs:
           npm pkg set build.docker="true"
           npm pkg set build.dev="true"
 
-      - name: Extract base version, date and commit
-        id: vars
+      - name: Extract version from package.json
+        id: extract_version
         run: |
-          BASE=$(jq -r '.version' package.json)
-          DATE=$(date -u +'%Y%m%d')
-          SHA=${GITHUB_SHA::7}
-          DEV_TAG="${BASE}-dev-${DATE}-${SHA}"
-          echo "DEV_TAG=$DEV_TAG" >> $GITHUB_ENV
-          echo "ORIG_SHA=$SHA"    >> $GITHUB_ENV
-          echo "BASE=$BASE" >> $GITHUB_ENV
+          VERSION=$(jq -r '.version' package.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Bump to date-commit-stamped version --no-git-tag-version tag ${{ env.DEV_TAG }} sha ${{ env.ORIG_SHA }}
-        run: npm version "${{ env.DEV_TAG }}" --no-git-tag-version --ignore-scripts
+      - name: Echo main version ${{ env.VERSION }}
+        run: |
+          echo "Extracted version is: ${{ env.VERSION }}"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -88,7 +84,7 @@ jobs:
             --platform linux/amd64,linux/arm64 \
             -f docker/Dockerfile.dev \
             -t luligu/matterbridge:dev \
-            -t luligu/matterbridge:dev-${{ env.BASE }} \
+            -t luligu/matterbridge:dev-${{ env.VERSION }} \
             --push .
         timeout-minutes: 60
 
