--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,5 +22,5 @@
     "noImplicitOverride": true,
     "skipLibCheck": true
   },
-  "references": [{ "path": "./packages/jest-utils" }, { "path": "./packages/vitest-utils" }, { "path": "./" }, { "path": "./packages/utils" }, { "path": "./packages/dgram" }, ]
+  "references": [{ "path": "./packages/jest-utils" }, { "path": "./packages/vitest-utils" }, { "path": "./" }, { "path": "./packages/utils" }, { "path": "./packages/dgram" }]
 }
