--- a/.github/workflows/publish-dev-daily.yml
+++ b/.github/workflows/publish-dev-daily.yml
@@ -67,7 +67,7 @@ jobs:
           echo "DEV_TAG=$DEV_TAG" >> $GITHUB_ENV
           echo "ORIG_SHA=$SHA"    >> $GITHUB_ENV
 
-      - name: Bump to date-stamped dev version tag ${{ env.DEV_TAG }} sha ${{ env.ORIG_SHA }}
+      - name: Bump to date-stamped dev version tag ${{ env.DEV_TAG }}
         run: npm version "${{ env.DEV_TAG }}" --no-git-tag-version --ignore-scripts
 
       - name: Check if a new dev-publish is needed
