--- a/.github/workflows/publish-dev-daily.yml
+++ b/.github/workflows/publish-dev-daily.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Always check out the dev branch, even for scheduled runs
-      - name: Checkout dev
+      - name: Checkout code to dev branch
         uses: actions/checkout@v4
         with:
           ref: dev
 
-      - name: Set up Node.js & registry
+      - name: Setup Node.js 24.x
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
+          node-version: '24.x'
           registry-url: 'https://registry.npmjs.org'
           cache: npm
 
