--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -25,10 +25,10 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Set up Node
+      - name: Setup Node.js 24.x
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
+          node-version: '24.x'
           registry-url: 'https://registry.npmjs.org'
           cache: npm
 
