--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -4,11 +4,11 @@ FROM ubuntu:latest
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install node from NodeSource
-RUN apt update || (sleep 10 && apt update) || (sleep 20 && apt update) && \
-  apt install -y --no-install-recommends ca-certificates curl && \
+RUN apt-get update || (sleep 10 && apt-get update) || (sleep 20 && apt-get update) && \
+  apt-get install -y --no-install-recommends ca-certificates curl && \
   curl -fsSL https://deb.nodesource.com/setup_24.x | bash - && \
-  apt install -y --no-install-recommends nodejs && \
-  apt update && apt upgrade -y && apt autoremove -y && apt clean
+  apt-get install -y --no-install-recommends nodejs && \
+  apt-get update && apt-get autoremove -y && apt-get clean
 
 # Install matterbridge
 WORKDIR /matterbridge    
