--- a/package.json
+++ b/package.json
@@ -190,7 +190,7 @@
     "docker:build:local:alpine": "docker build --no-cache --pull -f docker/Dockerfile.alpine -t matterbridge:alpine .",
     "docker:run:local:alpine": "docker run --rm -it --name matterbridge-alpine-local -p 8585:8283 matterbridge:alpine",
     "docker:build:local:s6-rc-base": "docker build --no-cache --pull -f docker/Dockerfile.s6-rc-base -t matterbridge:s6-rc-base .",
-    "docker:run:local:s6-rc-base": "docker run --rm -it --name matterbridge-s6-rc-base-local -p 8585:8283 matterbridge:s6-rc-base"
+    "docker:run:local:s6-rc-base": "docker run --rm -it --name matterbridge-s6-rc-base-local -p 8585:8283 matterbridge:s6-rc-base matterbridge"
   },
   "dependencies": {
     "@matter/main": "0.16.8",
