Update frontend dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,55 +27,56 @@
     "runMeBeforePublish": "npm run lint && npm run build && npm run test",
     "reset": "npm run deepClean && npm install && npm run build && npm run test",
     "install:all": "npm run install:react && npm run install:emotion && npm run install:mui && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:typescript && npm run install:vite && npm run install:vitest && npm run install:eslint && npm run install:prettier",
-    "install:react": "npm install react react-dom react-router react-router-dom --omit=dev && npm install --save-dev @types/react @types/react-dom",
-    "install:emotion": "npm install @emotion/react @emotion/styled --omit=dev",
-    "install:mui": "npm install @mui/material @mui/icons-material --omit=dev",
-    "install:mdi": "npm install @mdi/js @mdi/react --omit=dev",
-    "install:qrcode": "npm install qrcode.react --omit=dev",
-    "install:notistack": "npm install notistack --omit=dev",
-    "install:rjsf": "npm install @rjsf/core @rjsf/utils @rjsf/validator-ajv8 --omit=dev",
-    "install:typescript": "npm install --save-dev typescript @types/node",
-    "install:vite": "npm install --save-dev vite @vitejs/plugin-react",
-    "install:vitest": "npm install --save-dev vitest jsdom @testing-library/react @testing-library/jest-dom",
-    "install:eslint": "npm install --save-dev eslint eslint-plugin-react eslint-plugin-react-hooks typescript-eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser",
-    "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier"
+    "install:react": "npm install --save-exact react react-dom react-router react-router-dom && npm install --save-exact --save-dev @types/react @types/react-dom",
+    "install:emotion": "npm install --save-exact @emotion/react @emotion/styled",
+    "install:mui": "npm install --save-exact @mui/material @mui/icons-material",
+    "install:mdi": "npm install --save-exact @mdi/js @mdi/react",
+    "install:qrcode": "npm install --save-exact qrcode.react",
+    "install:notistack": "npm install --save-exact notistack",
+    "install:rjsf": "npm install --save-exact @rjsf/core@5.24.13 @rjsf/utils@5.24.13 @rjsf/validator-ajv8@5.24.13",
+    "install:rjsf:6": "npm install --save-exact @rjsf/core@latest @rjsf/utils@latest @rjsf/validator-ajv8@latest",
+    "install:typescript": "npm install --save-exact --save-dev typescript @types/node",
+    "install:vite": "npm install --save-exact --save-dev vite @vitejs/plugin-react",
+    "install:vitest": "npm install --save-exact --save-dev vitest jsdom @testing-library/react @testing-library/jest-dom",
+    "install:eslint": "npm install --save-exact --save-dev eslint eslint-plugin-react eslint-plugin-react-hooks typescript-eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser",
+    "install:prettier": "npm install --save-exact --save-dev prettier eslint-config-prettier eslint-plugin-prettier"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mdi/js": "^7.4.47",
-    "@mdi/react": "^1.6.1",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/material": "^7.3.5",
-    "@rjsf/core": "^5.24.13",
-    "@rjsf/utils": "^5.24.13",
-    "@rjsf/validator-ajv8": "^5.24.13",
-    "notistack": "^3.0.2",
-    "qrcode.react": "^4.2.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router": "^7.9.6",
-    "react-router-dom": "^7.9.6"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mdi/js": "7.4.47",
+    "@mdi/react": "1.6.1",
+    "@mui/icons-material": "7.3.7",
+    "@mui/material": "7.3.7",
+    "@rjsf/core": "5.24.13",
+    "@rjsf/utils": "5.24.13",
+    "@rjsf/validator-ajv8": "5.24.13",
+    "notistack": "3.0.2",
+    "qrcode.react": "4.2.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "react-router": "7.13.0",
+    "react-router-dom": "7.13.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.48.0",
-    "@typescript-eslint/parser": "^8.48.0",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "jsdom": "^27.2.0",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.14"
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.2",
+    "@types/node": "25.1.0",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "8.54.0",
+    "@typescript-eslint/parser": "8.54.0",
+    "@vitejs/plugin-react": "5.1.2",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.5",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "jsdom": "27.4.0",
+    "prettier": "3.8.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.54.0",
+    "vite": "7.3.1",
+    "vitest": "4.0.18"
   }
 }
